--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pokemon API</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
 
   <body>
@@ -32,7 +32,7 @@
           Submit
         </button>-->
       </form>
-      <script src="app.js"></script>
+      <script src="js/app.js"></script>
     </div>
   </body>
 </html>
