added input checking

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
           placeholder="Enter Pokemon Name Or ID"
           id="pokemonSearch"
           onkeypress="enterFunction(event)"
+          autocomplete="off"
         />
         <!--<button type="button" onclick="getPokemonName()" id="searchButton">
           Submit
         </button>-->
       </form>
+      <h1 class="feedback"></h1>
       <script src="js/app.js"></script>
     </div>
   </body>
